--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -471,11 +471,33 @@
       "voucherDiscount": "Voucher discount",
       "total": "Total",
       "name": "First-/lastname",
+      "street": "Street",
+      "postal": "Postal code",
+      "city": "City",
+      "country": "Country",
       "phone": "Phone",
       "email": "E-mail",
       "comment": "Comment",
+      "chooseTheme": "Choose theme",
+      "chooseTime": "Choose time",
+      "newsletter": "Yes, thanks, I want to get information on discounts and other offers from zdravlje.nu.",
+      "agree": "I agree with",
+      "rules": "Rules and conditions",
+      "privacyPolicy": "Privacy policy",
+      "understand": "I understand that I have a free term change no later than 24 hours until the beginning of the term itself",
+      "feedback": "Please take a moment to give us feedback",
+      "impressionWeb": "What is your impression of the website?",
+      "impressionPayment": "What is your impression of the payment process?",
+      "successfulOrder": "Your purchase is successful and we got your order. Soon we will contact you for an initial free assessment and for scheduling appointments.",
+      "otherComments": "Other comments",
+      "redirected": "You will be returned to the home page when you press ok",
+      "creditCard": "Credit card",
+      "invoice": "Invoice",
+      "paymentType": "Payment type",
+      "i": "and",
       "back": "Cancel",
       "placeOrder": "Place order",
+      "thankYou": "Thank you for your order",
       "close": "Close",
       "issue": "Issue",
       "invoiceText": "You will receive an invoice sent to your email with instructions for payment. When you make a payment to our bank account, we will contact you for your psychological counseling.",
@@ -672,7 +694,7 @@
     },
     "footerView": {
       "aboutWord": "O",
-      "about": "Mi smo usmjereni na svakodnevne probleme sa kojima se većina nas susreće tokom života. Mi težimo da naše savjetodavne usluge budu pristupačne za sve, diskretno i po razumnoj cijeni. Korištenjem teorijskih znanja i naučno dokazanih intervencija, možemo pomoći ljudima da prevaziđu svoje probleme i da nauče da žive život koji žele, udobno i samopouzdano.",
+      "about": "Mi smo usmjereni na svakodnevne probleme sa kojima se većina nas susreće tokom života. Mi težimo da naše savjetodavne usluge budu pristupačne za sve, povjerljivo i po razumnoj cijeni. Korištenjem teorijskih znanja i naučno dokazanih intervencija, možemo pomoći ljudima da prevaziđu svoje probleme i da nauče da žive život koji žele, udobno i samopouzdano.",
       "blog": "Blogovi",
       "conditions": "Uslovi",
       "privacyPolicy": "Politika privatnosti",
@@ -943,9 +965,31 @@
       "voucherDiscount": "Voucher popust",
       "total": "Ukupno",
       "name": "Ime i prezime",
+      "street": "Ulica",
+      "postal": "Poštanski broj",
+      "city": "Grad",
+      "country": "Zemlju",
       "phone": "Telefon",
       "email": "E-pošta",
+      "chooseTheme": "Izaberite temu",
+      "chooseTime": "Odaberite vrijeme",
+      "newsLetter": "Da, hvala, želim da dobijam informacije o popustima i drugim ponudama od zdravlje.nu.",
+      "agree": "Slažem se sa",
+      "i": "i",
+      "privacyPolicy": "Politika privatnosti",
+      "thankYou": "Hvala vam na nalogu",
+      "rules": "Pravilima i uslovima",
+      "understand": "Razumijem da imam besplatnu promjenu termina najkasnije 24 sata do početka samog termina",
+      "successfulOrder": "Vaša kupovina je uspješna i dobili smo Vašu narudžbu. Uskoro ćemo Vas kontaktirat za inicijalnu besplatnu procjenu i za zakazivanje termina.",
+      "feedback": "Molim vas, uzmite trenutak da nam date povratne informacije",
+      "impressionWeb": "Kakav je vaš utisak o web stranici",
+      "impressionPayment": "Kakav je vaš utisak o procesu plaćanja",
+      "otherComments": "Ostali komentari",
+      "redirected": "Vratit ćete se natrag na početnu stranicu kada pritisnete ok",
       "comment": "Komentar",
+      "creditCard": "Kreditna kartica",
+      "invoice": "Faktura",
+      "paymentType": "Tip plaćanja",
       "back": "Nazad",
       "placeOrder": "Zakažite",
       "close": "Blizu",
