--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -614,8 +614,8 @@
       "english": "Engleski",
       "bosnian": "Bosanski",
       "here": "ovdje",
-      "skypeWeek": "skype poziv",
-      "skypeWeeks": "skype poziva",
+      "skypeWeek": "online video poziv",
+      "skypeWeeks": "online video poziva",
       "and": "i",
       "emailResponse": "odgovor u toku",
       "hours": "sata",
@@ -765,7 +765,7 @@
     },
     "paymentView": {
       "heading": "Zakažite psihološko savjetovanje",
-      "intro": "Ovdje možete zakazati psihološko savjetovanje. Cijenu za Vaše izbore možete naći na donjem dijelu stranice. Kliknite na označenu tipku da izaberete Skype poziv, e-poštu ili kombinaciju Skype poziva i e-pošte (u tom slučaju kliknite na obje tipke). Ukoliko odlučite da kupite više Skype poziva ili sedmica u kojima biste koristili uslugu e-poštom, to je pojedinačna cijena tih usluga jeftinija. Tokom biranja možete pratiti jasno naznačenu ukupnu i pojedinačnu cijenu svih usluga koje odaberete.",
+      "intro": "Ovdje možete zakazati psihološko savjetovanje. Cijenu za Vaše izbore možete naći na donjem dijelu stranice. Kliknite na označenu tipku da izaberete online video poziv, e-poštu ili kombinaciju online video poziva i e-pošte (u tom slučaju kliknite na obje tipke). Ukoliko odlučite da kupite više online video ili sedmica u kojima biste koristili uslugu e-poštom, to je pojedinačna cijena tih usluga jeftinija. Tokom biranja možete pratiti jasno naznačenu ukupnu i pojedinačnu cijenu svih usluga koje odaberete.",
       "skypeWeek": "skype poziv",
       "skypeWeeks": "skype poziva",
       "packageWith": "Paket za",
