--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -626,14 +626,14 @@
         "\"name\" is not allowed to be empty": "Ime / prezime je obavezno",
         "\"phone\" is required": "Telefon je potreban",
         "\"phone\" is not allowed to be empty": "Telefon je potreban",
-        "\"street\" is required": "Ulica je potreban",
-        "\"street\" is not allowed to be empty": "Ulica je potreban",
+        "\"street\" is required": "Ulica je potrebna",
+        "\"street\" is not allowed to be empty": "Ulica je potrebna",
         "\"postal\" is required": "Poštanski broj je potreban",
         "\"postal\" is not allowed to be empty": "Poštanski broj je potreban",
         "\"city\" is required": "Grad je potreban",
         "\"city\" is not allowed to be empty": "Grad je potreban",
-        "\"mail\" is required": "E-pošta je potreban",
-        "\"mail\" is not allowed to be empty": "E-pošta je potreban",
+        "\"mail\" is required": "E-pošta je potrebna",
+        "\"mail\" is not allowed to be empty": "E-pošta je potrebna",
         "\"mail\" must be a valid email": "E-pošta mora biti važeća",
         "wrongRegexFormat": "Greška, pogrešan format"
       }
@@ -1122,13 +1122,13 @@
         "\"name\" is not allowed to be empty": "Ime / prezime je obavezno",
         "\"phone\" is required": "Telefon je potreban",
         "\"phone\" is not allowed to be empty": "Telefon je potreban",
-        "\"street\" is required": "Ulica je potreban",
+        "\"street\" is required": "Ulica je potrebna",
         "\"street\" is not allowed to be empty": "Ulica je potreban",
         "\"postal\" is required": "Poštanski broj je potreban",
         "\"postal\" is not allowed to be empty": "Poštanski broj je potreban",
         "\"city\" is required": "Grad je potreban",
         "\"city\" is not allowed to be empty": "Grad je potreban",
-        "\"mail\" is required": "E-pošta je potreban",
+        "\"mail\" is required": "E-pošta je potrebna",
         "\"mail\" is not allowed to be empty": "E-pošta je potreban",
         "\"mail\" must be a valid email": "E-pošta mora biti važeća adresa e-pošte",
         "wrongRegexFormat": "Greška, pogrešan format"
